--- a/css/general.css
+++ b/css/general.css
@@ -8,7 +8,7 @@ body {
 	font: normal 0.75em/0.75em Helvetica, Arial, sans-serif;
 	text-align: center;
 	color: #282828;
-	background: #d1d1d1;
+	background: #fff;
 }
 
 a {
@@ -31,7 +31,7 @@ p {
 	line-height: 1.1em;
 }
 
-p strong { color:#333333; }
+p strong { color:#ccc; }
 
 ::-moz-selection
 {
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 	display:block;
 	font-family: Helvetica, Arial, sans-serif; 
 	font-weight:700;
-	color:#272727;
+	color:#CCC;
 }
 
 h1 { font-size: 2.2em; line-height: 2em; }
@@ -69,46 +69,49 @@ h6 { font-size:1.167em; line-height:1.1em; }
 
 /* ! CONTENEDOR ================== */
 
-.wrapper { width: 520px; text-align: left; margin: 0 auto; background: #fff; }
+.wrapper { width: 700px; min-height:500px; padding:20px; text-align: left; margin: 30px auto; background: #151515; color:#FFF; overflow:hidden; position:relative; }
 
 
 /* ! Header ================== */
 
-header { padding: 0 10px; text-align: center; }
+header { padding: 0 10px; width:290px; float:right; }
 
-	header h1 {  }
+	header h1 { text-indent:-9999px; background:url(../images/logo_header.png) no-repeat; height:90px; width:290px; }
 
 
 /* ! Contenido ================== */
 
+img.kross_img { position:absolute; left:35px; top:15px; }
+
+section { 
+	float:right; 
+	width:60%;
+	margin:30px 0;
+	clear:both;
+	text-align:right;
+	
+	outline:aqua 1px dashed;
+}
+
 section.welcome {
 
 }
-
-	section.producto img {
-		display: block;
-		width: 220px;
-		height: 180px;
-		float: left;
-		margin: 10px;
-	}
-	
 	section.producto hgroup {
-		width: 220px;
 		float: right;
+		width:100%;
 	}
 
 /* ! Formulario ================== */
 
 
 a.btn {
-	display: block;
+	display: inline-block;
 	clear: both;
-	width: 200px;
+	width: 180px;
 	height: 50px;
-	margin: 20px auto;
-	background: #101010;
-	color: #fff;
+	margin: 20px 0;
+	background: #e6bd00;
+	color: #111;
 	text-align: center;
 	line-height: 50px;
 }
